--- a/CareerDayReg/CareerDayReg.html
+++ b/CareerDayReg/CareerDayReg.html
@@ -806,7 +806,7 @@
         </div>
     </div>
     {{#if printing}}
-        <iframe src="{{pathFor 'nametags'}}"></iframe>
+        <iframe src="{{pathFor 'nametags'}}" hidden></iframe>
     {{/if}}
     <button type="button" name="printnametags" class="offset btn btn-default printnametags"><span class="glyphicon glyphicon-print"></span></button>
 </template>
